--- a/ParqueoUlacit/Views/Shared/_Layout.cshtml
+++ b/ParqueoUlacit/Views/Shared/_Layout.cshtml
@@ -33,20 +33,23 @@
                         <!-- Botón de administrador -->
                         if (Session["UsuarioId"].ToString() == "1")
                         {
-                            <a href="@Url.Action("Index", "AdminHome")" class="admin-button me-3">
-                                <i class="bi bi-speedometer2 me-1"></i>Panel Admin
+                            <a href="@Url.Action("Index", "AdminHome")" class="nav-pulse-button me-3">
+                                <span>Panel Admin</span>
+                                <i class="bi bi-speedometer2"></i>
                             </a>
                         }
                         <!-- Botón de cierre de sesión -->
-                        <a href="@Url.Action("Logout", "Login")" class="logout-button">
-                            <i class="bi bi-box-arrow-right me-1"></i>Cerrar Sesión
+                        <a href="@Url.Action("Logout", "Login")" class="nav-pulse-button-inverse">
+                            <span>Cerrar Sesión</span>
+                            <i class="bi bi-box-arrow-right"></i>
                         </a>
                     }
                     else
                     {
                         <!-- Botón de inicio de sesión -->
-                        <a href="@Url.Action("Login", "Login")" class="login-button">
-                            <i class="bi bi-box-arrow-in-right me-1"></i>Iniciar Sesión
+                        <a href="@Url.Action("Login", "Login")" class="nav-pulse-button">
+                            <span>Iniciar Sesión</span>
+                            <i class="bi bi-box-arrow-in-right"></i>
                         </a>
                     }
                 </div>
