--- a/ParqueoUlacit/Views/Shared/_Layout.cshtml
+++ b/ParqueoUlacit/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
     <!-- Añadir Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="~/Scripts/jquery-3.6.0.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-light">
