--- a/ParqueoUlacit/Views/Login/Login.cshtml
+++ b/ParqueoUlacit/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model ParqueoUlacit.Models.TableViewModel.UsuarioTableViewModel
+﻿@model ParqueoUlacit.Models.ViewModel.UsuarioViewModel
 @{
     ViewBag.Title = "Iniciar Sesión";
     Layout = "~/Views/Shared/_Layout.cshtml";
