--- a/ParqueoUlacit/Views/Vehiculo/Create.cshtml
+++ b/ParqueoUlacit/Views/Vehiculo/Create.cshtml
@@ -98,12 +98,14 @@
 
             <div class="row mt-4">
                 <div class="col">
-                    <div class="d-flex justify-content-between">
+                    <div class="form-actions">
                         <a href="@Url.Action("Index", "AdminHome")" class="pulse-button-inverse">
-                            <span><i class="fa fa-arrow-left"></i> Volver al Panel</span>
+                            <span>Volver al Panel</span>
+                            <i class="bi bi-arrow-left"></i>
                         </a>
                         <button type="submit" class="pulse-button">
-                            <span><i class="fa fa-car"></i> Guardar Vehículo</span>
+                            <span>Guardar Vehículo</span>
+                            <i class="bi bi-car-front-fill"></i>
                         </button>
                     </div>
                 </div>
